--- a/task-2.ipynb
+++ b/task-2.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "task-2.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -91,12 +77,8 @@
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "<class 'str'>\n",
-            "<class 'int'>\n",
-            "<class 'bool'>\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "<class 'str'>\n<class 'int'>\n<class 'bool'>\n"
         }
       ]
     },
@@ -138,10 +120,8 @@
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "45\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "45\n"
         }
       ]
     },
@@ -185,10 +165,8 @@
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "2020 05 11\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "2020 05 11\n"
         }
       ]
     },
@@ -228,10 +206,8 @@
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "5050\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "5050\n"
         }
       ]
     },
@@ -269,10 +245,8 @@
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "사바마라다나가\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "사바마라다나가\n"
         }
       ]
     },
@@ -309,14 +283,12 @@
         "\n",
         "print(mean)"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "70\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "70\n"
         }
       ]
     },
@@ -353,15 +325,12 @@
         "else:\n",
         "  print(\"짝수\")"
       ],
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "숫자를 입력해주세요5\n",
-            "짝수가 아닙니다\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "짝수가 아닙니다\n"
         }
       ]
     },
@@ -400,14 +369,12 @@
         "line = (list_08[0])**2 + (list_08[1])**2\n",
         "print(line)"
       ],
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "25\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "25\n"
         }
       ]
     },
@@ -451,15 +418,12 @@
         "res = prime_number(num_10)\n",
         "print(res)"
       ],
-      "execution_count": 39,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "숫자를 입력해주세요69\n",
-            "소수가 아닙니다\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "소수가 아닙니다\n"
         }
       ]
     },
@@ -518,14 +482,12 @@
         "res = W*x + b\n",
         "print(f\"정답: {res}\")"
       ],
-      "execution_count": 32,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "정답: 31\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "정답: 31\n"
         }
       ]
     },
@@ -583,8 +545,9 @@
         "  n = len(x)\n",
         "  res = 0\n",
         "  for i in range(n):\n",
-        "    res += (x[i]-y[i])**2\n",
-        "  res /= n\n",
+        "    number = (W*x[i]-y[i])**2\n",
+        "    res += number\n",
+        "  res //= n\n",
         "  return res\n",
         "\n",
         "W = 2\n",
@@ -593,14 +556,12 @@
         "\n",
         "print(f\"정답: {cost(W, x, y):0.2f}\")"
       ],
-      "execution_count": 30,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "정답: 80.67\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "정답: 14.00\n"
         }
       ]
     },
@@ -611,7 +572,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 정답 : 80.67"
+        "#### 정답 : 14"
       ]
     },
     {
@@ -637,19 +598,20 @@
       "source": [
         "#### 정답 : 1"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5xOfHMeluKUm",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "task-2.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
