Colaboratory를 통해 생성됨

--- a/task-2.ipynb
+++ b/task-2.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "task-2.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -56,11 +70,11 @@
       "metadata": {
         "id": "R8MW9Rqhu61b",
         "colab_type": "code",
+        "outputId": "9110be2c-24ac-403a-afe9-17ad116576f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "f9f42108-3146-4d37-8042-0fba73ef2c3c"
+        }
       },
       "source": [
         "# 주어진 변수(a, b, c) 직접 수정불가\n",
@@ -77,8 +91,12 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "<class 'str'>\n<class 'int'>\n<class 'bool'>\n"
+          "text": [
+            "<class 'str'>\n",
+            "<class 'int'>\n",
+            "<class 'bool'>\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -99,11 +117,11 @@
       "metadata": {
         "id": "wI7l2ltaRUKy",
         "colab_type": "code",
+        "outputId": "ac15b569-ed17-4b04-ecba-4d8126d6e8e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "e4d0a4cb-3ddd-4b45-e260-d24db91ebf1b"
+        }
       },
       "source": [
         "# 주어진 변수(num_list) 직접 수정 불가\n",
@@ -120,8 +138,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "45\n"
+          "text": [
+            "45\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -144,11 +164,11 @@
       "metadata": {
         "id": "270XbDvYqvJu",
         "colab_type": "code",
+        "outputId": "59a9499a-7387-4027-c272-e3b1a208f2ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "552e9017-edc3-49ff-810d-86014cb1b1ce"
+        }
       },
       "source": [
         "# 주어진 변수(date)만 직접 수정불가, 다른 year, month, day 변수는 직접 수정가능\n",
@@ -165,8 +185,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "2020 05 11\n"
+          "text": [
+            "2020 05 11\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -187,11 +209,11 @@
       "metadata": {
         "id": "MiGjtBg3r2f_",
         "colab_type": "code",
+        "outputId": "27cd0cdf-318b-480d-a10b-ee06f8894b55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "c0a63581-7a05-41c5-d048-647a5320e495"
+        }
       },
       "source": [
         "# 주어진 변수(summary) 직접 수정불가\n",
@@ -206,8 +228,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "5050\n"
+          "text": [
+            "5050\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -228,11 +252,11 @@
       "metadata": {
         "id": "hHCquVTHbSNN",
         "colab_type": "code",
+        "outputId": "fdd7c706-2e01-4805-e1ea-da6eabefb6e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "b63b6831-9501-44ea-ede4-14250c6df0fc"
+        }
       },
       "source": [
         "# 주어진 변수(hangul) 직접 수정불가\n",
@@ -245,8 +269,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "사바마라다나가\n"
+          "text": [
+            "사바마라다나가\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -267,11 +293,11 @@
       "metadata": {
         "id": "kcUrhpt5c22W",
         "colab_type": "code",
+        "outputId": "b8539c6e-b0a0-4154-9e29-9fd751207695",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "036183fa-3bea-4324-d79b-667ee3826877"
+        }
       },
       "source": [
         "# 주어진 변수(num) 직접 수정불가\n",
@@ -287,8 +313,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "70\n"
+          "text": [
+            "70\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -309,11 +337,11 @@
       "metadata": {
         "id": "8gwIuAVWdl9Z",
         "colab_type": "code",
+        "outputId": "d9ba98f3-603d-40b7-b891-e30f4cea9c40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "f9e51a90-5597-4011-acf6-df18e4edd81f"
+        }
       },
       "source": [
         "# 주어진 변수(n) 직접 수정불가\n",
@@ -329,8 +357,11 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "짝수가 아닙니다\n"
+          "text": [
+            "숫자를 입력해주세요14\n",
+            "짝수\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -355,11 +386,11 @@
       "metadata": {
         "id": "9bEv0Wn3e_Da",
         "colab_type": "code",
+        "outputId": "f66c8f98-a7ff-49db-b5ac-d2ba85b304c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "ee82fa05-75fb-4f51-dbb9-105589b4f7fa"
+        }
       },
       "source": [
         "# 주어진 변수(list_08) 직접 수정불가\n",
@@ -373,8 +404,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "25\n"
+          "text": [
+            "25\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -394,11 +427,11 @@
       "metadata": {
         "id": "j7MNZZGGuXu0",
         "colab_type": "code",
+        "outputId": "63359036-258d-4730-b574-cb8a1b62d215",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "5e8327ec-e3ab-4db8-c213-bde3db06b1c5"
+        }
       },
       "source": [
         "# 주어진 변수(num_10) 직접 수정불가\n",
@@ -418,12 +451,15 @@
         "res = prime_number(num_10)\n",
         "print(res)"
       ],
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "소수가 아닙니다\n"
+          "text": [
+            "숫자를 입력해주세요15\n",
+            "소수가 아닙니다\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -468,11 +504,11 @@
       "metadata": {
         "id": "7RBsOQk0td09",
         "colab_type": "code",
+        "outputId": "2e14c2cf-4e6e-4fd7-fa07-21bcdced643d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "8146f0b8-5465-4d94-cade-1a5a57004b6c"
+        }
       },
       "source": [
         "W = 3\n",
@@ -486,8 +522,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "정답: 31\n"
+          "text": [
+            "정답: 31\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -534,11 +572,11 @@
       "metadata": {
         "id": "RbLD7dnCrhQk",
         "colab_type": "code",
+        "outputId": "c5288513-62b9-4946-b9ec-1cb3324f00f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "c661eabf-8b03-4562-e156-6024faae080e"
+        }
       },
       "source": [
         "def cost(W, x, y):\n",
@@ -556,12 +594,14 @@
         "\n",
         "print(f\"정답: {cost(W, x, y):0.2f}\")"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "정답: 14.00\n"
+          "text": [
+            "정답: 14.00\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -599,19 +639,5 @@
         "#### 정답 : 1"
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "name": "task-2.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
