--- a/task-1.ipynb
+++ b/task-1.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "task-1.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPzS4mtNkkp4HTKGgkDDnGs",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -67,6 +52,10 @@
         "회사명: (주)엠비아이솔루션\n",
         "\n",
         "서비스명: 해피톡\n",
+        "\n",
+        "![](https://i.ytimg.com/vi/yJ6fZ8BZ7c8/maxresdefault.jpg)\n",
+        "\n",
+        "<br/>\n",
         "\n",
         "- 특징\n",
         "\n",
@@ -146,6 +135,10 @@
         "\n",
         "서비스명: DeepASR\n",
         "\n",
+        "![](https://www.monews.co.kr/news/photo/202002/208300_59859_5140.jpg)\n",
+        "\n",
+        "<br/>\n",
+        "\n",
         "- 다양한 의료 문서 작성 과정에 자동음성인식(Automatic Speech Recognition) 기술을 도입해 의료진의 음성을 통해 실시간으로 문서 작성과 수정을 가능하게 하는 인공지능 기반 의료 음성 인식 소프트웨어\n",
         "\n",
         "- 수 만건의 국내 의료 영상 판독 데이터를 학습해 다양한 검사기법에 혼재돼 사용되는 국영문 의학용어를 빠르게 처리\n",
@@ -189,6 +182,10 @@
         "회사명: 루닛 Lunit\n",
         "\n",
         "서비스명\n",
+        "\n",
+        "![](https://biowatch.co.kr/wp-content/uploads/2018/08/654783110_1474959235.97821.jpg)\n",
+        "\n",
+        "<br/>\n",
         "\n",
         "1. Lunit INSIGHT CXR(흉부 X선 영상 분석 AI)\n",
         "\n",
@@ -240,6 +237,10 @@
         "회사명: 언맨드솔루션\n",
         "\n",
         "서비스: WITH:US (위더스)\n",
+        "\n",
+        "![](https://www.irobotnews.com/news/photo/201910/18372_41993_5646.jpg)\n",
+        "\n",
+        "<br/>\n",
         "\n",
         "- 순수 국내기술로 개발한 완전 자율주행셔틀\n",
         "\n",
@@ -301,5 +302,20 @@
         "-  [언맨솔루션 홈페이지](http://www.unmansol.com/sub02.html )"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "task-1.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPzS4mtNkkp4HTKGgkDDnGs",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
